Fixing alignment:

--- a/ui/client-react/src/components/fields/formulaField.scss
+++ b/ui/client-react/src/components/fields/formulaField.scss
@@ -28,13 +28,6 @@
 }
 
 .filledFormula {
-    display: block;
-
-    height: $formula-background-large-height;
-    width: $formula-background-large-width;
-
     @include small-breakpoint {
-        width: 100%;
-        height: $formula-background-small-height;
     }
 }
